--- a/src/entities/Place/ui/PlaceMiniCard.module.css
+++ b/src/entities/Place/ui/PlaceMiniCard.module.css
@@ -18,7 +18,7 @@
 .text {
 	display: flex;
 	flex-direction: column;
-	align-items: start;
+	align-items: flex-start;
 }
 .text[data-right = true] {
 	align-items: end;
